[gd_scene load_steps=14 format=3 uid="uid://dkxgx0ixdku0y"]

[ext_resource type="Environment" uid="uid://cxcp6r7xgfbvv" path="res://environment.tres" id="1_ulcgi"]
[ext_resource type="Script" uid="uid://d2b3k0fc1e2qc" path="res://player.gd" id="2_nxogm"]
[ext_resource type="PackedScene" uid="uid://bdees4st7rogb" path="res://sword.tscn" id="3_y2354"]
[ext_resource type="Script" uid="uid://co8mqqmtb5puy" path="res://enemy.gd" id="4_m7jmp"]
[ext_resource type="PackedScene" uid="uid://37t22ao537b0" path="res://models/enemy_capsule.tscn" id="5_y2354"]
[ext_resource type="Script" uid="uid://bw420rldl6tdu" path="res://incoming_attack_manager.gd" id="7_ni31j"]
[ext_resource type="Script" uid="uid://butnvd7gqhb1q" path="res://ui.gd" id="7_xlvrw"]

[sub_resource type="PlaneMesh" id="PlaneMesh_nxogm"]
size = Vector2(10, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_nxogm"]
margin = 0.0
size = Vector3(10, 0.1, 10)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ulcgi"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u3cyc"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.5)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3253y"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_u3cyc"]

[node name="Scene" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_ulcgi")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.49999997, 0.86602545, 0, -0.86602545, 0.49999997, 0, 10, 10)

[node name="Ground" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_nxogm")

[node name="StaticBody3D" type="StaticBody3D" parent="Ground"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground/StaticBody3D"]
transform = Transform3D(0.99999976, 0, 0, 0, 1, 0, 0, 0, 0.99999976, 0, 0, 0)
shape = SubResource("BoxShape3D_nxogm")

[node name="Player" type="CharacterBody3D" parent="." node_paths=PackedStringArray("incoming_attack_manager")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0929046, 0)
script = ExtResource("2_nxogm")
incoming_attack_manager = NodePath("../IncomingAttackManager")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CapsuleMesh_ulcgi")
surface_material_override/0 = SubResource("StandardMaterial3D_u3cyc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_3253y")

[node name="Head" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5423541, 0)

[node name="Camera3D" type="Camera3D" parent="Player/Head"]

[node name="sword" parent="Player/Head" instance=ExtResource("3_y2354")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.559, -0.35, -0.64)

[node name="Boxes" type="Node3D" parent="."]

[node name="CSGBox3D2" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.120598, 0, 0)
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.144412, 0, 3.1173677)
use_collision = true

[node name="CSGBox3D3" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.2175536, 0, -3.7005901)
use_collision = true

[node name="CSGBox3D4" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.933445, 0, 0)
use_collision = true

[node name="CSGBox3D5" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.909631, 0, 3.1173677)
use_collision = true

[node name="CSGBox3D8" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(0.0015184437, 0, 0.99999887, 0, 1, 0, -0.99999887, 0, 0.0015184437, -0.052310944, 0, 4.55523)
use_collision = true

[node name="CSGBox3D9" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(0.0015184437, 0, 0.99999887, 0, 1, 0, -0.99999887, 0, 0.0015184437, 3.0650172, 0, 4.5837765)
use_collision = true

[node name="CSGBox3D6" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.836489, 0, -3.7005901)
use_collision = true

[node name="CSGBox3D10" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(0.009477009, 0, -0.9999553, 0, 1, 0, 0.9999553, 0, 0.009477009, -0.3564632, 0, -5.097847)
use_collision = true

[node name="CSGBox3D11" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(0.009477009, 0, -0.9999553, 0, 1, 0, 0.9999553, 0, 0.009477009, -3.473918, 0, -5.0921164)
use_collision = true

[node name="CSGBox3D12" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(0.009477009, 0, -0.9999553, 0, 1, 0, 0.9999553, 0, 0.009477009, 3.343042, 0, -5.229869)
use_collision = true

[node name="CSGBox3D7" type="CSGBox3D" parent="Boxes"]
transform = Transform3D(0.0015184437, 0, 0.99999887, 0, 1, 0, -0.99999887, 0, 0.0015184437, -3.7530437, 0, 4.6465664)
use_collision = true

[node name="Enemy" type="CharacterBody3D" parent="." node_paths=PackedStringArray("player")]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0.818, 0, -3)
script = ExtResource("4_m7jmp")
player = NodePath("../Player")

[node name="EnemyCapsule" parent="Enemy" instance=ExtResource("5_y2354")]

[node name="sword" parent="Enemy" instance=ExtResource("3_y2354")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.445, 0.891, -0.366)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_u3cyc")

[node name="IncomingAttackManager" type="Node3D" parent="." node_paths=PackedStringArray("control_node")]
script = ExtResource("7_ni31j")
control_node = NodePath("../CanvasLayer/Control")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_xlvrw")

[connection signal="attack_end" from="Enemy" to="IncomingAttackManager" method="_on_enemy_attack_end"]
[connection signal="attack_pos" from="Enemy" to="IncomingAttackManager" method="_on_enemy_attack_pos"]
[connection signal="attack_start" from="Enemy" to="IncomingAttackManager" method="_on_enemy_attack_start"]
[connection signal="enemy_attack_blocked" from="IncomingAttackManager" to="Enemy" method="_on_incoming_attack_manager_enemy_attack_blocked"]
